# huace_gnss_driver

./: CMakeLists.txt  README.md  package.xml
config/: huace.yaml
doc/: 坐标系.md
include/huace_gnss_driver/: async_manager.hpp  communication_core.hpp  huace_node.hpp  huace_node_base.hpp  io.hpp  message_handler.hpp  settings.hpp  telegram.hpp
include/huace_gnss_driver/parsers/: parsing_utilities.hpp  sbf_utilities.hpp  string_utilities.hpp
include/huace_gnss_driver/parsers/nmea_parsers/: gpchc.hpp  gpchcx.hpp  gpgga.hpp  gpgsa.hpp  gpgsv.hpp  gprmc.hpp
launch/: rover.launch  rover.launch.py  rover_node.launch.py
msg/: Gpchc.msg  Gpchcx.msg
src/huace_gnss_driver/: communication_core.cpp  huace_node.cpp  main.cpp  message_handler.cpp
src/huace_gnss_driver/parsers/: parsing_utilities.cpp  string_utilities.cpp
src/huace_gnss_driver/parsers/nmea_parsers/: gpchc.cpp  gpchcx.cpp  gpgga.cpp  gpgsa.cpp  gpgsv.cpp  gprmc.cpp
src/test/: test_udp_server.cpp
